# gsoc2019_prototype

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Document.h  Main.cpp  README.md
source/: Application.cpp  Application.h  CMakeLists.txt  Document.cpp  Document.h  Interpreter.cpp  Interpreter.h  Main.cpp  Object.h
tests/: CMakeLists.txt  TestObject.cpp  TestRuntime.cpp
